@@ -1,3 +1,7 @@
+2011-10-30 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* src/SDCCsymt.c (computeType): fixed bug #3431210
+
 2011-10-31 Raphael Neider <rneider AT web.de>
 
 	* src/pic14/device.c (init_pic): reformatted,
